# tk-netgraph

./: .gitignore  MANIFEST.in  README.md  noxfile.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
examples/: basic.py  config_basic.py  ctk_basic.py
netgraph/: __init__.py  __main__.py  _canvas.py  _cli.py  _config.py  _edge.py  _math.py  _netmanager.py  _node.py  _objects.py  _traits.py  _types.py
netgraph/_vendor/: _font_manager.py  ctk_canvas.py
netgraph/api/: __init__.py  _canvas.py  _config.py  _edge.py  _node.py  _objects.py
netgraph/impl/: __init__.py  _canvas.py  _config.py  _edge.py  _node.py  _objects.py
